# technews-discord-bot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: digest.yml
src/: config.py  main.py  run_once.py
src/ai/: gemini.py
src/bot/: discord_bot.py  poster.py
src/crawler/: github_trending.py  rss.py
